# stewart_robot

./: Dockerfile  README.md  Robot.wbo  docker-compose.yaml  transforms
controller_ws/devel/: .catkin  .rosinstall  setup.sh
controller_ws/src/stewart_controller/: CMakeLists.txt
controller_ws/src/stewart_controller/config/: stewart.yaml
controller_ws/src/stewart_controller/include/: macros.hpp  stewart_controller.hpp
controller_ws/src/stewart_controller/launch/: stewart.launch
controller_ws/src/stewart_controller/src/: kinematics.cpp  stewart_controller.cpp  stewart_node.cpp
controller_ws/src/stewart_controller/worlds/: .stewart_platform.wbproj  stewart_platform.wbt
data/: mixed_target.bag
doc/: stewart.dox
doc/html/: annotated.html  classStewart-members.html  classStewart.html  classStewart__inherit__graph.map  classStewart__inherit__graph.md5  classes.html  dir_0286f2a68e2738fd6b25c28a60d4c3b6.html  dir_20a87fef1396f77e3d8a30349a5855e8.html  dir_8a0aa8f783461a9ff707e0790c911c10.html  dir_f328039663bf748b673962da79c2d364.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  macros_8hpp.html  macros_8hpp__dep__incl.map  macros_8hpp__dep__incl.md5  macros_8hpp_source.html  menudata.js  stewart__controller_8hpp.html  stewart__controller_8hpp__incl.map  stewart__controller_8hpp__incl.md5  stewart__controller_8hpp_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  (+4 more)
doc/latex/: annotated.tex  classStewart.tex  classStewart__coll__graph.md5  dir_0286f2a68e2738fd6b25c28a60d4c3b6.tex  dir_20a87fef1396f77e3d8a30349a5855e8.tex  dir_8a0aa8f783461a9ff707e0790c911c10.tex  dir_f328039663bf748b673962da79c2d364.tex  files.tex  hierarchy.tex  macros_8hpp.tex  macros_8hpp__dep__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  stewart__controller_8hpp.tex  stewart__controller_8hpp__incl.md5
plot/: plot_data.py  plot_points.py
scripts/: build.sh  launch.sh
wb_stewart_controller/worlds/: .stewart_platform.wbproj  stewart_platform.wbt
(+11 files in other folders)
